--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Udehnihhh - Homepage</title>
+    <title>Udehnihhh APP - Homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-teal-50 min-h-screen flex items-center justify-center">
