--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Udehnihhh APP - Homepage</title>
+    <title>Udehnih - Homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-teal-50 min-h-screen flex items-center justify-center">
 <div class="text-center p-10 bg-white rounded-2xl shadow-xl border border-teal-200">
-    <h1 class="text-4xl font-bold text-teal-600 mb-4">Welcome to <span class="text-teal-800">Udehnih!</span></h1>
+    <h1 class="text-4xl font-bold text-teal-600 mb-4">Welcome to <span class="text-teal-800">Udehnih App! </span></h1>
     <p class="text-teal-700">Skill up your knowledge in the most fun and engaging way! 🚀💫</p>
 </div>
 </body>
