--- a/src/main/resources/templates/student-detail-report.html
+++ b/src/main/resources/templates/student-detail-report.html
@@ -40,11 +40,11 @@
 <!-- Modal Confirm Delete -->
 <div id="confirmDeleteModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded-xl w-full max-w-md shadow-lg border border-teal-200">
-        <h3 class="text-xl font-semibold text-teal-800 mb-4">Apakah Anda yakin?</h3>
-        <p class="text-gray-700 mb-4">Anda akan menghapus laporan. Aksi ini tidak bisa diulang kembali.</p>
+        <h3 class="text-xl font-semibold text-teal-800 mb-4">Are you sure?</h3>
+        <p class="text-gray-700 mb-4">You will deleted your report.</p>
         <div class="flex justify-end space-x-2">
             <button onclick="closeConfirmModal()" class="bg-gray-200 text-teal-800 px-4 py-2 rounded-lg">Cancel</button>
-            <button onclick="confirmDeleteReport()" class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700">Ya, Hapus</button>
+            <button onclick="confirmDeleteReport()" class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700">Yes, Delete</button>
         </div>
     </div>
 </div>
