--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -14,6 +14,7 @@
                 <div class="navbar-nav me-auto">
                     <a class="nav-link" href="/courses">🔍 Cari Kursus</a>
                     <a class="nav-link" href="/my-courses" id="myCourseLink" style="display: none;">📋 Kursus Saya</a>
+                    <a class="nav-link" href="/courses/tutor/apply" id="applyAsTutorLink" style="display: none;">🎓 Daftar sebagai Tutor</a>
                 </div>
                 <div class="navbar-nav ms-auto">
                     <!-- Show when not logged in -->
