--- a/src/main/resources/templates/course/tutor_register.html
+++ b/src/main/resources/templates/course/tutor_register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8" />
   <title>Daftar Sebagai Tutor | Udehnih</title>
