--- a/src/main/resources/templates/course/list.html
+++ b/src/main/resources/templates/course/list.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Kursus - Udehnih</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+        src="https://cdn.tailwindcss.com/3.4.3"
+        integrity="sha384-Uq3Xg6crV4gsltwvwmef5Oib81eugE2U4w67JC+FwraP+bYHQL8ieY0Km1rYWk9b"
+        crossorigin="anonymous"
+    ></script>
     <script src="https://kit.fontawesome.com/a2e0e6a627.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-teal-50 text-gray-800">
