--- a/src/main/resources/templates/review/create-review.html
+++ b/src/main/resources/templates/review/create-review.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Buat Ulasan - Udehnih</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+        src="https://cdn.tailwindcss.com/3.4.3"
+        integrity="sha384-Uq3Xg6crV4gsltwvwmef5Oib81eugE2U4w67JC+FwraP+bYHQL8ieY0Km1rYWk9b"
+        crossorigin="anonymous"
+    ></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
